feat(example): add example of how to use get_file_size() method

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -14,3 +14,4 @@ create_example(download_file)
 create_example(upload_file)
 create_example(logger)
 create_example(file_transfer_progress)
+create_example(get_file_size)
