--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,9 +81,7 @@ install(
     TARGETS ftp
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(
     DIRECTORY include/ftp
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
