--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 project(libftp
-    VERSION 0.3.3
-    DESCRIPTION "FTP client library"
-    LANGUAGES CXX)
+        VERSION 0.3.3
+        DESCRIPTION "FTP client library"
+        LANGUAGES CXX)
 
 string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)
 
@@ -77,11 +77,9 @@ if (LIBFTP_BUILD_CMDLINE_CLIENT)
 endif()
 
 include(GNUInstallDirs)
-install(
-    TARGETS ftp
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
-install(
-    DIRECTORY include/ftp
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(TARGETS ftp
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(DIRECTORY include/ftp
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
