core: implement ssl_socket class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(sources
         include/ftp/detail/socket.hpp
         include/ftp/detail/socket_base.hpp
         include/ftp/detail/socket_factory.hpp
+        include/ftp/detail/ssl_socket.hpp
         include/ftp/detail/utils.hpp
         include/ftp/stream/input_stream.hpp
         include/ftp/stream/istream_adapter.hpp
@@ -59,6 +60,7 @@ set(sources
         src/reply.cpp
         src/socket.cpp
         src/socket_factory.cpp
+        src/ssl_socket.cpp
         src/utils.cpp)
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${sources})
