--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get externals
-      run: brew install boost
+      run: |
+        brew install boost
+        pip3 install pyOpenSSL
 
     - name: Build
       run: |
