--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get externals
-      run: sudo apt-get install g++-10 libboost-all-dev
+      run: |
+        sudo apt-get install g++-10 libboost-all-dev
+        pip3 install pyOpenSSL
 
     - name: Build
       run: |
