example: add an example for FTPS connection

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -16,3 +16,4 @@ create_example(logger)
 create_example(file_transfer_progress)
 create_example(get_file_list)
 create_example(get_file_size)
+create_example(ftps)
