--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,9 +17,8 @@ jobs:
 
     - name: Get externals
       run: |
-        brew install python
         brew install boost
-        pip3 install pyOpenSSL
+        pip3 install --break-system-packages pyOpenSSL
 
     - name: Build
       run: |
