core: implement ftp::ssl::create_context() function
It provides a more convenient way to create the ftp::ssl::context_ptr object and allows to configure the SSL session resumption behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(sources
         src/replies.cpp
         src/reply.cpp
         src/socket.cpp
+        src/ssl.cpp
         src/ssl_socket.cpp
         src/utils.cpp)
 
