cmake: generate the export header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,11 @@ add_library(ftp::ftp ALIAS ftp)
 target_link_libraries(ftp PUBLIC Boost::boost)
 target_link_libraries(ftp PUBLIC OpenSSL::SSL)
 
+include(GenerateExportHeader)
+generate_export_header(ftp
+        BASE_NAME libftp
+        EXPORT_FILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/include/ftp/export.hpp)
+
 target_include_directories(ftp
         PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
