--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,13 @@ set(sources
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${sources})
 
+if (MSVC)
+    add_compile_options(
+        # C4251: 'identifier' : class 'type' needs to have dll-interface to be
+        #        used by clients of class 'type2'
+        /wd4251)
+endif()
+
 add_library(ftp ${sources})
 add_library(ftp::ftp ALIAS ftp)
 
