--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,19 +15,23 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Cache externals
-      id: cache-externals
+    - name: Cache Boost
+      id: cache-boost
       uses: actions/cache@v3
       with:
         path: ${{runner.temp}}/boost_1_88_0
-        key: cache-externals
+        key: cache-boost
 
-    - name: Get externals
-      if: steps.cache-externals.outputs.cache-hit != 'true'
+    - name: Get GCC
+      run: sudo apt-get install g++-10
+
+    - name: Get pyOpenSSL
+      run: pyOpenSSL
+
+    - name: Get Boost
+      if: steps.cache-boost.outputs.cache-hit != 'true'
       working-directory: ${{runner.temp}}
       run: |
-        sudo apt-get install g++-10
-        pip3 install pyOpenSSL
         # Download Boost.
         wget https://archives.boost.io/release/1.88.0/source/boost_1_88_0.tar.gz
         # Extract.
