--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,15 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Cache externals
-      id: cache-externals
+    - name: Cache Boost
+      id: cache-boost
       uses: actions/cache@v3
       with:
         path: ${{runner.temp}}\boost_1_88_0
-        key: cache-externals
+        key: cache-boost
 
-    - name: Get externals
-      if: steps.cache-externals.outputs.cache-hit != 'true'
+    - name: Get Boost
+      if: steps.cache-boost.outputs.cache-hit != 'true'
       working-directory: ${{runner.temp}}
       shell: powershell
       run: |
